[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hstool"
dynamic = ["version"]
description = 'Synchronize the blog files managed by git to strapi.'
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "husheng", email = "hs3434.work@gmail.com" },
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "python-frontmatter",
  "sqlalchemy",
  "fastapi",
  "python-multipart",
  "click",
  "requests"
]
[project.scripts]
hstool = "hstool.cli.cli:cli"
[tool.hatch.build.targets.wheel]
packages = ["src/hstool"]
artifacts = ["src/hstool/*"]

[project.urls]
Documentation = "https://github.com/hs3434/hstool#readme"
Issues = "https://github.com/hs3434/hstool/issues"
Source = "https://github.com/hs3434/hstool"

[tool.hatch.version]
path = "src/hstool/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
  "python-docx>=1.1.2"
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/hstool tests}"

